deploy_for_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 22sep22
  labels:
    app: web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
