first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: myapp1
    labels:
      app: myapp
spec:
 containers:
 - name: nginx-container
   image: ngin
