pod-resource-limit-besteffort.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-limits
spec:
 containers:
   - name: resource-limits
     image: nginx
     ports:
     - containerPort: 80
