first-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: myapp-service
spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30200
  selector:
    app: myapp
