network-policy.yaml
# vi net-pol-allow-port-8080-in-same-namespace-for-all-pods.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-net-policy1
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
     - from:
          - namespaceSelector:
               matchLabels:
                    area: prod
            podSelector: {}
       ports:
        - protocol: TCP
          port: 8080


# vi net-pol-allow-port-8080-from-another-namespace-for-all-pods.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-net-policy2
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
     - from:
          - namespaceSelector:
               matchLabels:
                    area: test
            podSelector: {}
       ports:
        - protocol: TCP
          port: 8080

# vi net-pol-allow-port-8080-to-all-pods-from-another-namespace-specific-pod.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-net-policy3
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
     - from:
          - namespaceSelector:
               matchLabels:
                    area: dev
            podSelector:
               matchLabels:
                  app: webdev 
       ports:
        - protocol: TCP
          port: 8080

# Note - Pod label should be unique in dev namespace.

# vi net-pol-allow-port-8080-to-specific-pod-from-another-namespace-specific-pod.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-net-policy4
  namespace: prod
spec:
  podSelector:
      matchLabels:
          app: webprod
  policyTypes:
    - Ingress
  ingress:
     - from:
          - namespaceSelector:
               matchLabels:
                    area: dev
            podSelector:
               matchLabels:
                  app: webdev 
       ports:
        - protocol: TCP
          port: 8080
